# pi-pico-sbw

./: .gitignore  CMakeLists.txt  CMakePresets.json  addrow.py  bash.exe.stackdump  clear_user.py  clear_user_headless.py  current_measure.md  current_measure.py  current_measure_calibrate.py  debug_shell.py  log.py  main.py  network_test.py  pico_sdk_import.cmake  pio-sbw.md  pixel_bg_test.py  pixel_test.py  pixels.md  pixels.py  power_detect_test.py  program-tsl.py  program.py  program_auto.py  program_tsl.py  readme.MD  safe_time.py  sbw.py  sbw_config.py  sbw_pio.py  sound.py  speaker_sweep.py  status.md  target_power.py  testsuite.py  tsl-calibre-msp.out  tsl-calibre-msp.txt  update_firmware_image.py  using_mpremote.MD  utils.py  (+3 more)
.claude/: settings.local.json
.claude/skills/par/: SKILL.md
.claude/skills/push-image/: SKILL.md
claude/JSONL/: session.jsonl
docs/: pico_pio_handoff.md
include/: sbw_hw.h  sbw_jtag.h  sbw_pins.h  sbw_transport.h
mpy/: Makefile  README.md  SBW_NATIVE_API.md  build.md  debug_shell.py  main.py  sbw.py  sbw_config.py  sbw_native.c  testsuite.py
mpy/native/: Makefile  README.md  sbw_native.c
simple-current-test/: main.py
simple-network-test/: main.py
simple-network-test/.githooks/: pre-commit
src/: main.c  sbw_hw.c  sbw_jtag.c  sbw_transport_gpio.c
tools/: build-mpy-native.ps1  deploy-native.ps1  pico-env.ps1
